# book-scraping

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build_push.yml  linter.yml  tf_bootstrap.yml  tf_deploy.yml
src/: main.py
src/common/: constants.py
src/parsers/: base_parser.py  book_details_parser.py  book_parser.py  popular_list_parser.py
src/scrapers/: base_scraper.py  book_details_scraper.py  book_scraper.py  popular_list_scraper.py
src/uploader/: uploader.py
terraform/: main.tf  variables.tf
terraform/bootstrap/: main.tf  variables.tf
terraform/lambda/: lambda_func.py
