[project]
name = "book-scraping"
version = "0.1.0"
description = "A set of scripts that collect data about popular lists, books, and their details."
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "boto3>=1.40.69",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "ruff>=0.14.3",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

line-length = 79
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E` & `W`) codes by default.
select = ["F", "E", "W"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather that tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pycodestyle]
# Maximum line length for docstrings and comments.
max-doc-length = 72
